=========
CHANGELOG
=========

2.1.3.dev0
==================

** New **

* Support Python3, Django 2.0 and 2.1
* Drop Django 1.8, 1.9 and 1.10 support

2.1.2 (2018-03-25)
==================

** New **

* Support Django 1.8 to 1.11


2.1.1 (2017-03-23)
==================

** Fixes **

* Fix releases required includes


2.1.0 (2017-03-23)
==================

** New **

* From now, Attachment model support external picture URLs


2.0.0 (2017-02-21)
==================

** BREAKING CHANGES **

* Provide an abstract model. Users are required to define their own
  Attachment model


1.0.0 (2017-01-14)
==================

** BREAKING CHANGES **

* Remove support of Django <= 1.7
* Rename parameter 'module_name' as 'model_name' in urls

** New **

* Support Django 1.8
* Add initial migration (Caution! it depends on app settings)


0.5.0 (2016-01-11)
==================

** New **

* Add a command to clean obsolete files


0.4.1 (2015-03-20)
==================

** Fixes **

* Fix uploaded file modification


0.4.0 (2015-03-20)
==================

** New **

* Allow to add links to Youtube or Soundcloud media


0.3.0 (2015-03-18)
==================

** Removed (WARNING: backward incompatibility) **

* Totally remove crispy_forms and floppy_forms integration (you can now override the form by a custom one instead)

** New **

* Allow usage of a custom form


0.2.3 (2014-12-15)
==================

* Handle swappable User model
* Embed spinner, bootstrap-confirm and add a bootstrap-3-confirm
* Remove crispy_forms dependency


0.2.2 (2014-11-14)
==================

* Fix permission check for attachments


0.2.0 (2014-11-12)
==================

* Allow to override file types from request.


0.1.3 (2014-11-07)
==================

* Fix packaging of locale files


0.1.2 (2014-11-07)
==================

* Fix upload regular expressions for author and legend


0.1.1 (2014-11-03)
==================

* Fix missing SVG media in package


0.1.0 (2014-10-23)
==================
