@@ -64,7 +64,7 @@ class Attachment(models.Model):
 
     content_type = models.ForeignKey(ContentType, on_delete=models.CASCADE)
     object_id = models.PositiveIntegerField()
-    content_object = GenericForeignKey('content_type', 'object_id')
+    content_object = GenericForeignKey('content_type', 'object_id', )
 
     attachment_file = models.FileField(_('File'), blank=True,
                                        upload_to=attachment_upload,
